# rawmv

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
src/: main.rs
