[package]
name = "rawmv"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/oxalica/rawmv"
description = "mv(1) but without cp(1) fallback. Simple wrapper of rename(2)/renameat2(2)."
keywords = ["utilities", "coreutils", "mv"]
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.106"
structopt = { version = "0.3.25", default-features = false }

