[package]
name = "rawmv"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/oxalica/rawmv"
description = "mv(1) but without cp(1) fallback. Simple wrapper of renameat2(2)."
keywords = ["utilities", "coreutils", "mv"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
anyhow = "1.0.52"
pico-args = { version = "0.5", default-features = false, features = ["combined-flags"] }
rustix = { version = "0.37.19", default-features = false, features = ["fs", "std"] }
